WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110707
[Mac] user preference caption style applied incorrectly
https://bugs.webkit.org/show_bug.cgi?id=110707
Summary
[Mac] user preference caption style applied incorrectly
Eric Carlson
Reported
2013-02-23 21:03:39 PST
CaptionUserPreferencesMac attaches a user style sheet for the cue text and "window" properties to the a child of the element used for the ::cue pseudo element. This makes it impossible for CSS to override these properties.
Attachments
Proposed patch
(4.94 KB, patch)
2013-02-23 21:12 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-02-23 21:04:07 PST
<
rdar://problem/13281096
>
Eric Carlson
Comment 2
2013-02-23 21:12:07 PST
Created
attachment 189956
[details]
Proposed patch
Maciej Stachowiak
Comment 3
2013-02-23 21:26:45 PST
Comment on
attachment 189956
[details]
Proposed patch r=me We should find a way to make this code testable in the future.
Eric Carlson
Comment 4
2013-02-23 21:33:32 PST
Committed in
https://trac.webkit.org/r143857
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug