[Mac] user preference caption style applied incorrectly https://bugs.webkit.org/show_bug.cgi?id=110707 <rdar://problem/13281096>

Reviewed by Maciej Stachowiak.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::textTrackContainerElementShadowPseudoId): New
    static function so the pseudo ID is available.
(WebCore::MediaControlTextTrackContainerElement::shadowPseudoId): Call textTrackContainerElementShadowPseudoId.
* html/shadow/MediaControlElements.h:

* page/CaptionUserPreferencesMac.mm:
(WebCore::CaptionUserPreferencesMac::captionsStyleSheetOverride): Style the text track container
    element for cue color, edge style, and font name.


git-svn-id: svn://svn.chromium.org/blink/trunk@143857 bbb929c8-8fbe-4397-9dbb-9b2b20218538