third_party/WebKit/Source/WebCore/html/shadow/MediaControlElements.h
@@ -441,6 +441,7 @@ public:
     void updateDisplay();
     void updateSizes(bool forceUpdate = false);
     void createSubtrees(Document*);
+    static const AtomicString& textTrackContainerElementShadowPseudoId();
 
 private:
     explicit MediaControlTextTrackContainerElement(Document*);
