third_party/WebKit/Source/WebCore/page/CaptionUserPreferencesMac.mm
@@ -38,6 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "Language.h"
 #import "LocalizedStrings.h"
 #import "Logging.h"
+#import "MediaControlElements.h"
 #import "PageGroup.h"
 #import "SoftLinking.h"
 #import "TextTrackCue.h"
@@ -377,10 +378,7 @@ String CaptionUserPreferencesMac::captionsStyleSheetOverride() const
 
     String windowColor = captionsWindowCSS();
     String windowCornerRadius = windowRoundedCornerRadiusCSS();
-    String captionsColor = captionsTextColorCSS();
-    String edgeStyle = captionsTextEdgeCSS();
-    String fontName = captionsDefaultFontCSS();
-    if (!captionsColor.isEmpty() || !windowColor.isEmpty() || !windowCornerRadius.isEmpty() || !edgeStyle.isEmpty() || !fontName.isEmpty()) {
+    if (!windowColor.isEmpty() || !windowCornerRadius.isEmpty()) {
         captionsOverrideStyleSheet.append(" video::");
         captionsOverrideStyleSheet.append(TextTrackCueBox::textTrackCueBoxShadowPseudoId());
         captionsOverrideStyleSheet.append('{');
@@ -389,6 +387,18 @@ String CaptionUserPreferencesMac::captionsStyleSheetOverride() const
             captionsOverrideStyleSheet.append(windowColor);
         if (!windowCornerRadius.isEmpty())
             captionsOverrideStyleSheet.append(windowCornerRadius);
+
+        captionsOverrideStyleSheet.append('}');
+    }
+    
+    String captionsColor = captionsTextColorCSS();
+    String edgeStyle = captionsTextEdgeCSS();
+    String fontName = captionsDefaultFontCSS();
+    if (!captionsColor.isEmpty() || !edgeStyle.isEmpty() || !fontName.isEmpty()) {
+        captionsOverrideStyleSheet.append(" video::");
+        captionsOverrideStyleSheet.append(MediaControlTextTrackContainerElement::textTrackContainerElementShadowPseudoId());
+        captionsOverrideStyleSheet.append('{');
+
         if (!captionsColor.isEmpty())
             captionsOverrideStyleSheet.append(captionsColor);
         if (!edgeStyle.isEmpty())
@@ -398,7 +408,7 @@ String CaptionUserPreferencesMac::captionsStyleSheetOverride() const
 
         captionsOverrideStyleSheet.append('}');
     }
-
+    
     LOG(Media, "CaptionUserPreferencesMac::captionsStyleSheetOverrideSetting sytle to:\n%s", captionsOverrideStyleSheet.toString().utf8().data());
 
     return captionsOverrideStyleSheet.toString();
